[package]
name = "zentinel-agent-graphql-security"
version = "0.2.0"
edition = "2021"
authors = ["Raskell <hello@raskell.io>"]
description = "GraphQL security agent for Zentinel proxy - query depth, complexity, and introspection control"
license = "Apache-2.0"
repository = "https://github.com/zentinelproxy/zentinel-agent-graphql-security"
keywords = ["zentinel", "proxy", "agent", "graphql", "security"]
categories = ["network-programming", "web-programming"]
readme = "README.md"

[dependencies]
# Zentinel SDK and Protocol
zentinel-agent-sdk = "0.2"
zentinel-agent-protocol = "0.5"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Futures for block_on
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# GraphQL parsing - apollo-parser is actively maintained, spec-compliant
apollo-parser = "0.8"

# Hashing for persisted queries
sha2 = "0.10"
hex = "0.4"

# Base64 encoding/decoding
base64 = "0.22"

# Pattern matching for field auth rules
glob = "0.3"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[[bin]]
name = "zentinel-graphql-security-agent"
path = "src/main.rs"

[lib]
name = "zentinel_agent_graphql_security"
path = "src/lib.rs"
